--- a/README.Rmd
+++ b/README.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Problem Set 3. Due Thurs March 2 5pm"
-author: "Student name"
+author: "Frank Santoriello"
 date: "Feb 23, 2017"
 output: html_document
 ---
@@ -43,6 +43,8 @@ First we need load the data.
 
 ```{r load_raw_data, message = FALSE}
 library(tidyverse)
+library(stringr)
+library(gridExtra)
 
 # bgh data
 bgh_url <- 'http://www.ncbi.nlm.nih.gov/geo/download/?acc=GSE43163&format=file&file=GSE43163_CompleteCountTable_Bgh.txt.gz'
@@ -83,13 +85,16 @@ Now that the raw data are loaded, your first task is to tidy the data with `tidy
 The key steps are to `gather()` the data into key-value pairs and then `separate()` the information from the key column into new columns.
 
 ```{r problem_1}
-# add tidying code here
+# tidy data
+raw_data %>%
+  gather(key, value, -gene.name) %>%
+  separate(key, into = c('plant','fungus','time.point','rep'), sep = '_') -> cleaned_data
 
 # report the cleaned_data by just naming it, uncomment the following line:
-# cleaned_data
+cleaned_data
 ```
 
-## Problem 3
+## Problem 2
 
 You need to translate what you learned on the command line into the R world.
 
@@ -101,6 +106,12 @@ raw_data | awk '$4 == "6hpi"' | sort -k6nr | head -n 1 | cut -f2
 
 ```{r}
 # translate to dplyr code
+cleaned_data %>%
+  filter(time.point == '6hpi') %>%
+  arrange(desc(value)) %>%
+  slice(1) %>%
+  select(2) 
+
 ```
 
 Which plant / fungus pair has the highest expression in the 18hpi time point?
@@ -111,6 +122,11 @@ raw_data | awk '$4 == "18hpi"' | sort -k6nr | head -n 1 | cut -f2,3
 
 ```{r}
 # translate to dplyr code
+cleaned_data %>%
+  filter(time.point == '18hpi') %>%
+  arrange(desc(value)) %>%
+  slice(1) %>%
+  select(c(2,3))
 ```
 
 ## Problem 3
@@ -125,10 +141,15 @@ Identify the top 3 most consistently differentially expressed genes between the 
 
 1. Create a new table from the cleaned data by moving each `hpi` value to a new column name, with counts for each in the column (hint: use a `tidyr` verb). It is helpful to reformat the `hpi` values by converting from e.g. `6hpi` to `hpi.6`. You can use `mutate` to do this, i.e.:
 
-```{r reformat_time, eval=FALSE}
+```{r reformat_time, eval = TRUE}
+# reformat the data for differential expression analysis 
 cleaned_data %>%
-  mutate(time.value = str_replace(time.point, 'hpi', ''),
-         time.hpi = str_c('hpi.', time.value))
+  mutate(time.point = str_replace(time.point, 'hpi', ''),
+         time.point = str_c('hpi.', time.point)) %>%
+  spread(time.point, value) -> expr_data
+
+expr_data <- expr_data[,c(1:4,8,5:7)]
+
 ```
 
 2. Create a new column containing the expression difference between the relevant time points.
@@ -137,12 +158,39 @@ cleaned_data %>%
 
 4. Sort by these statistics and use the `dplyr` verb `slice` to pull the ones you want (i.e., the top 3). Note you will have to remove `gene.name` from the grouping so that sorting works.
 
-```{r problem_3}
+```{r problem_3 }
+# identify the top 3 consistently differentially expressed genes
+expr_data %>%
+  # log2 transform data and calculate fold change between hpi.6 and hpi.24
+  mutate(hpi.6 = log(hpi.6, 2),
+         hpi.12 = log(hpi.12, 2),
+         hpi.18 = log(hpi.18, 2),
+         hpi.24 = log(hpi.24, 2),
+         expr.diff = hpi.24 - hpi.6) %>%
+  group_by(gene.name, plant, fungus) %>%
+  # calculate mean fold change and variance
+  summarise(expr.mean = mean(expr.diff), expr.var = var(expr.diff)) %>%
+  group_by(plant, fungus) %>%
+  # remove infinite values and idenify genes with > 2 fold expression difference
+  filter(abs(expr.mean) >= 1, 
+         expr.mean != Inf, 
+         expr.mean != -Inf) %>%
+  # sort by varience to identify most consistently differential genes
+  arrange(expr.var) %>%
+  # identify 3 most consitently differential genes for each plant/fungus pair
+  slice(1:3) -> diff_expr_data
+
+diff_expr_data
+  
 ```
 
 ## Problem 4
 
 Now examine the above final data frame above and write a few sentences putting inline code in least 3 places. For example, There are `r nrow(mtcars)` rows of data in `mtcars`.
+
+The tidying process for the data above generated a tibble with `r ncol(cleaned_data)` columns and `r nrow(cleaned_data)` rows. 
+
+That data was then transformed for expression analysis by splitting out the `r colnames(cleaned_data[,4])` column into 4 new columns (`r colnames(expr_data[,5:8])`) corresponding to the different time points. These were then log transformed and analyzed for consistent differential expression resulting in the `r nrow(diff_expr_data)` genes listed in `diff_expr_data`.
 
 ## Problem 5
 
@@ -158,5 +206,24 @@ Plot the expression (`value`) by time (`hpi`) for the above genes. Format the pl
 
 Extra credit: add error bars to the plot (use `geom_errorbar`).
 
-```{r problem_5}
+```{r problem_5, fig.width = 10, fig.height = 10 }
+
+cleaned_data %>%
+  # reformat time.point
+  mutate(time.point = str_replace(time.point, 'hpi', ''),
+         time.point = as.numeric(time.point)) %>%
+  # group by time.point and pull out genes that match the 12 genes listed in problem 3
+  group_by(time.point) %>%
+  subset(cleaned_data$gene.name %in% diff_expr_data$gene.name) %>%
+  # plot value vs time.point
+  ggplot(aes(x = factor(time.point), y = value, 
+             color = gene.name, shape = rep, group = gene.name)) +
+    geom_point() +
+    geom_smooth(method = "glm", se = FALSE) +
+    facet_wrap(c("plant", "gene.name"), scales = "free", ncol = 4) +
+    theme_bw() +
+    ggtitle("Consistently Differentially Expressed Genes by Plant Species")
+    
 ```
+
+Not all plant gene pairs are relavant based on the output of problem 3. I attempted some fancy subsetting to account for this, but failed. Therefore, here is all twelve genes for each plant. 
